# health-chain-mvp

./: .gitignore  LICENSE  README.md
Client/: LEIA-ME.txt  SubmitTransactionPermissions.ts  frstConnectionTest.js  frstConnectionTest.ts  grant-access.ts  helloWord.ts  ipfsExample.ts  medicalHistoryCreate.ts  medicalHistoryDoctorReading.ts  medicalHistoryPatientReading.ts  medicalPermissionsCheckAccess.ts  medicalPermissionsGrantAccess.js  medicalPermissionsGrantAccess.ts  medicalPermissionsRevokeAccess.ts  package-lock.json  package.json  testeConection.ts  tsconfig.json
Client/kubo/: LEIA-ME.txt
blockchain/: Cargo.toml  Dockerfile  README.md  dprint.json  rust-toolchain.toml
blockchain/docs/: rust-setup.md
blockchain/node/: Cargo.toml
blockchain/node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
blockchain/pallets/history/: Cargo.toml
blockchain/pallets/history/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
blockchain/pallets/medical-history/: Cargo.toml
blockchain/pallets/medical-history-reader/: Cargo.toml
blockchain/pallets/medical-history-reader/src/: README.md  benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
blockchain/pallets/medical-history/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
blockchain/pallets/medical-permissions/: Cargo.toml
blockchain/pallets/medical-permissions/src/: lib.rs  mock.rs  tests.rs  weights.rs
blockchain/pallets/template/: Cargo.toml
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: apis.rs  benchmarks.rs  lib.rs
blockchain/runtime/src/configs/: mod.rs
blockchain/scripts/: benchmark.sh  fmt.sh
docs/: DS_HealphChain.docx  Modelagem_UI.drawio  Requisitos.md  UML_HealphChain.drawio
frontend/: address.txt  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AllHistory.tsx  CreateRecord.tsx  DoctorPatientView.tsx  Input.tsx  PatientHistory.tsx  PermissionManagement.tsx
frontend/src/contexts/: ToastContext.tsx  WalletContext.tsx
frontend/src/utils/: blockchain.ts  ipfs-functions.ts  polkadot.api.ts  promises.ts  shared.ts
