[package]
name = "pallet-medical-history-reader"
version = "0.1.0"
description = "FRAME pallet for reading medical history data"
authors.workspace = true
edition.workspace = true
license = "MIT-0"
publish = false
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Dependências da HealthChain (para ler os dados e permissões)
pallet-medical-history = { path = "../medical-history", default-features = false }
pallet-medical-permissions = { path = "../medical-permissions", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
    "pallet-medical-history/std",
    "pallet-medical-permissions/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
    "pallet-medical-history/try-runtime",
    "pallet-medical-permissions/try-runtime",
]