[package]
name = "pallet-medical-history-reader"
version = "0.1.0"
description = "FRAME pallet for reading medical history data"
authors.workspace = true
edition.workspace = true
license = "MIT-0"
publish = false
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true } # Para possibilitar ativar os benchmarks e calcular na real qual é o peso de cada extrínseco

# HealthChain dependencies
pallet-medical-history = { path = "../medical-history", default-features = false }
pallet-medical-permissions = { path = "../medical-permissions", default-features = false }

# Timestamp is required because this pallet depends on `pallet_timestamp::Config`.
pallet-timestamp = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]


# Habilita itens usados por benchmarking (padronizado) -- Usado para o cálculo de pesos dos extrínsecos ----- START -----
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
# Habilita itens usados por benchmarking (padronizado) -- Usado para o cálculo de pesos dos extrínsecos ----- END -------

std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "pallet-medical-history/std",
    "pallet-medical-permissions/std",
    "pallet-timestamp/std",
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-medical-history/try-runtime",
    "pallet-medical-permissions/try-runtime",
    "pallet-timestamp/try-runtime",
]
